# table_objects

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/gui/: central_widget.cpp  central_widget.h  table_widget.cpp  table_widget.h
src/logic/: logic.cpp  logic.h
src/model/: model.cpp  model.h
